[gd_scene load_steps=38 format=2]

[ext_resource path="res://images/signup_gamepad.png" type="Texture" id=1]
[ext_resource path="res://images/signup_keyboard.png" type="Texture" id=2]
[ext_resource path="res://images/signup_online.png" type="Texture" id=3]
[ext_resource path="res://fonts/display_code.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/title_normal.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/gibberish_answer_regular.tres" type="DynamicFont" id=6]
[ext_resource path="res://optionBox.tres" type="StyleBox" id=7]
[ext_resource path="res://Signup.gd" type="Script" id=8]
[ext_resource path="res://fonts/body_bold.tres" type="DynamicFont" id=9]
[ext_resource path="res://fonts/small_normal.tres" type="DynamicFont" id=10]
[ext_resource path="res://fonts/body_normal.tres" type="DynamicFont" id=11]
[ext_resource path="res://SignupMarquee.gd" type="Script" id=12]
[ext_resource path="res://green.stylebox" type="StyleBox" id=13]
[ext_resource path="res://fonts/player_number_font.tres" type="DynamicFont" id=14]
[ext_resource path="res://TypingHandler.tscn" type="PackedScene" id=15]
[ext_resource path="res://TypingBox.stylebox" type="StyleBox" id=16]
[ext_resource path="res://images/choosekb_daisy.png" type="Texture" id=17]
[ext_resource path="res://images/choosekb_spiral.png" type="Texture" id=18]
[ext_resource path="res://images/choosekb_trad.png" type="Texture" id=19]
[ext_resource path="res://SignupModal.gd" type="Script" id=20]
[ext_resource path="res://ButtonPrompt.stylebox" type="StyleBox" id=21]
[ext_resource path="res://control_type_icon.tres" type="SpriteFrames" id=22]
[ext_resource path="res://no_h_scrollbar.theme" type="Theme" id=23]
[ext_resource path="res://images/signup_pointer.png.png" type="Texture" id=24]
[ext_resource path="res://LoadingIndicator.gd" type="Script" id=25]
[ext_resource path="res://images/signup-qr.png" type="Texture" id=26]

[sub_resource type="Animation" id=8]
resource_name = "Enter"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.3, -2, 1 ),
"update": 0,
"values": [ 1240.0, 800.0, 880.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Init"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1300.0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Enter"
length = 0.2
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.2 ),
"transitions": PoolRealArray( 0.5, -2, 1 ),
"update": 0,
"values": [ 720.0, 634.0, 638.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Init"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 720.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "choose_keyboard"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("SignupModal:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.501961 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SignupModal/Panel:rect_position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ 1460.0, 176.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SignupModal/Panel:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 0.3, 2, 0.5, 2, 0.5 ),
"update": 0,
"values": [ 0.0, -5.0, 0.0, -0.7, 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "chosen_keyboard"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("SignupModal/Panel/List:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "done"
tracks/0/type = "value"
tracks/0/path = NodePath("SignupModal:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.4, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SignupModal/Panel:rect_position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ 176.0, 1460.0 ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.611765, 0.988235, 0.376471, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.00392157, 0.682353, 0.0745098, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.866667, 0.866667, 0.866667, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.509804, 0.509804, 0.509804, 1 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.0431373, 0.521569, 0.180392, 1 )
border_width_top = 36
border_color = Color( 0.0745098, 0.717647, 0.372549, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.184314, 0.235294, 0.239216, 1 )
border_width_top = 36
border_color = Color( 0.305882, 0.380392, 0.384314, 1 )
border_blend = true

[node name="Signup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 360 )
script = ExtResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "VOX"

[node name="Tween" type="Tween" parent="AudioStreamPlayer"]

[node name="Label" type="Label" parent="."]
margin_left = 200.0
margin_right = 338.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 5 )
text = "Sign up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 72.0
margin_right = -392.0

[node name="SignupOnline" type="TextureRect" parent="Instructions"]
margin_right = 880.0
margin_bottom = 140.0
rect_min_size = Vector2( 879, 140 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Label" parent="Instructions/SignupOnline"]
margin_left = 317.0
margin_top = 5.0
margin_right = 933.0
margin_bottom = 49.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 11 )
text = "Visit the website asdf.gh/jkl"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomCode2" type="Label" parent="Instructions/SignupOnline"]
margin_left = 317.0
margin_top = 37.0
margin_right = 813.0
margin_bottom = 81.0
rect_scale = Vector2( 0.75, 0.754 )
custom_fonts/font = ExtResource( 11 )
text = "and enter the room code:"
valign = 2

[node name="ShowHide" type="Label" parent="Instructions/SignupOnline"]
margin_left = 317.0
margin_top = 70.0
margin_right = 691.0
margin_bottom = 114.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 11 )
text = "Space/„çô: hide room code"
valign = 2

[node name="ReadAloud" type="Label" parent="Instructions/SignupOnline"]
margin_left = 317.0
margin_top = 92.0
margin_right = 813.0
margin_bottom = 136.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 11 )
text = "Shift/Select: read room code aloud"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomCode" type="Label" parent="Instructions/SignupOnline"]
margin_left = 583.0
margin_top = 33.0
margin_right = 693.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 4 )
text = "WWWW"
align = 1
valign = 1

[node name="Signup-qr" type="Sprite" parent="Instructions/SignupOnline"]
position = Vector2( 203, 11 )
scale = Vector2( 3, 3 )
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 35, 35 )

[node name="ScrollContainer" type="ScrollContainer" parent="Instructions"]
margin_top = 148.0
margin_right = 880.0
margin_bottom = 400.0
rect_min_size = Vector2( 880, 240 )
mouse_filter = 2
theme = ExtResource( 23 )
scroll_vertical_enabled = false
script = ExtResource( 12 )

[node name="HBoxContainer" type="HBoxContainer" parent="Instructions/ScrollContainer"]
margin_right = 2704.0
margin_bottom = 240.0
custom_constants/separation = 32

[node name="SignupGamepad" type="TextureRect" parent="Instructions/ScrollContainer/HBoxContainer"]
margin_right = 880.0
margin_bottom = 240.0
rect_min_size = Vector2( 880, 240 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="SignupKeyboard" type="TextureRect" parent="Instructions/ScrollContainer/HBoxContainer"]
margin_left = 912.0
margin_right = 1792.0
margin_bottom = 240.0
rect_min_size = Vector2( 880, 240 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="SignupPointer" type="TextureRect" parent="Instructions/ScrollContainer/HBoxContainer"]
margin_left = 1824.0
margin_right = 2704.0
margin_bottom = 240.0
rect_min_size = Vector2( 880, 240 )
texture = ExtResource( 24 )
expand = true
stretch_mode = 5

[node name="Timer" type="Timer" parent="Instructions/ScrollContainer"]
wait_time = 5.0
autostart = true

[node name="Tween" type="Tween" parent="Instructions/ScrollContainer"]

[node name="Players" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -384.0
margin_top = 156.0
margin_right = -24.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ready" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 40.0
margin_right = 440.0
margin_bottom = 136.0
custom_styles/panel = ExtResource( 13 )

[node name="Label3" type="Label" parent="Ready"]
margin_left = 13.0
margin_top = -12.0
margin_right = 61.0
margin_bottom = 52.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 14 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ready"]
margin_left = 56.0
margin_top = 10.0
margin_right = 384.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 11 )
text = "press ‚Üí to start!"

[node name="Label2" type="Label" parent="Ready"]
margin_left = 16.0
margin_top = 53.0
margin_right = 384.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 10 )
text = "or press Return on the keyboard"

[node name="Anim" type="AnimationPlayer" parent="Ready"]
autoplay = "Init"
anims/Enter = SubResource( 8 )
anims/Init = SubResource( 9 )

[node name="TouchButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -384.0
margin_top = -80.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 21 )
custom_styles/pressed = ExtResource( 21 )
custom_styles/focus = ExtResource( 21 )
custom_styles/disabled = ExtResource( 21 )
custom_styles/normal = ExtResource( 21 )
text = "Play using touch controls?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ready2" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -384.0
margin_top = 720.0
margin_right = -8.0
margin_bottom = 796.0
rect_pivot_offset = Vector2( -170, 56 )
custom_styles/panel = ExtResource( 7 )

[node name="Anim" type="AnimationPlayer" parent="Ready2"]
autoplay = "Init"
anims/Enter = SubResource( 12 )
anims/Init = SubResource( 13 )

[node name="Label4" type="Label" parent="Ready2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 7.0
margin_right = -8.0
margin_bottom = -7.0
custom_fonts/font = ExtResource( 10 )
text = "The room is full!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="SignupModal" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
script = ExtResource( 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="SignupModal"]
root_node = NodePath("../..")
anims/choose_keyboard = SubResource( 5 )
anims/chosen_keyboard = SubResource( 6 )
anims/done = SubResource( 7 )

[node name="Panel" type="Panel" parent="SignupModal"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 820.0
margin_top = -328.0
margin_right = 1748.0
margin_bottom = 328.0
rect_pivot_offset = Vector2( 0, 656 )
custom_styles/panel = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="SignupModal/Panel"]
margin_left = 108.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 98.0
rect_min_size = Vector2( 64, 90 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 14 )
text = "WASD"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type" type="AnimatedSprite" parent="SignupModal/Panel"]
position = Vector2( 58, 47 )
scale = Vector2( 0.667, 0.667 )
frames = ExtResource( 22 )
animation = "touch"

[node name="Instructions" type="Label" parent="SignupModal/Panel"]
anchor_right = 1.0
margin_left = 12.0
margin_top = 574.0
margin_right = -8.0
margin_bottom = 638.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Enter your name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions2" type="Label" parent="SignupModal/Panel"]
anchor_right = 1.0
margin_left = 360.0
margin_top = 590.0
margin_right = 340.0
margin_bottom = 654.0
rect_scale = Vector2( 0.6, 0.6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
custom_fonts/font = ExtResource( 5 )
text = "(or leave it blank, your choice)"

[node name="List" type="HBoxContainer" parent="SignupModal/Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = 82.0
margin_right = 128.0
margin_bottom = -78.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="SignupModal/Panel/List"]
margin_right = 384.0
margin_bottom = 496.0
rect_min_size = Vector2( 384, 0 )
focus_neighbour_right = NodePath("../Button2")
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="ChoosekbTrad" type="TextureRect" parent="SignupModal/Panel/List/Button"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_right = 160.0
margin_bottom = 320.0
rect_min_size = Vector2( 320, 320 )
texture = ExtResource( 19 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SignupModal/Panel/List/Button"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 314.0
margin_right = -8.0
margin_bottom = 358.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
custom_fonts/font = ExtResource( 9 )
text = "Grid Keyboard"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="SignupModal/Panel/List/Button"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 362.0
margin_right = -8.0
margin_bottom = 506.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Very slow and unwieldy, but it‚Äôs what you expect.

Not recommended."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="SignupModal/Panel/List"]
margin_left = 400.0
margin_right = 784.0
margin_bottom = 496.0
rect_min_size = Vector2( 384, 0 )
focus_neighbour_left = NodePath("../Button")
focus_neighbour_right = NodePath("../Button3")
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="ChoosekbTrad" type="TextureRect" parent="SignupModal/Panel/List/Button2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_right = 160.0
margin_bottom = 320.0
rect_min_size = Vector2( 320, 320 )
texture = ExtResource( 17 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SignupModal/Panel/List/Button2"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 314.0
margin_right = -8.0
margin_bottom = 358.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
custom_fonts/font = ExtResource( 9 )
text = "Daisywheel Keyboard"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="SignupModal/Panel/List/Button2"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 362.0
margin_right = -8.0
margin_bottom = 506.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Choose one of 9 panes with the joystick, then press the face buttons to enter letters. Most efficient, but may take a while to learn."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="SignupModal/Panel/List"]
margin_left = 800.0
margin_right = 1184.0
margin_bottom = 496.0
rect_min_size = Vector2( 384, 0 )
focus_neighbour_left = NodePath("../Button2")
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="ChoosekbTrad" type="TextureRect" parent="SignupModal/Panel/List/Button3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_right = 160.0
margin_bottom = 320.0
rect_min_size = Vector2( 320, 320 )
texture = ExtResource( 18 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SignupModal/Panel/List/Button3"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 314.0
margin_right = -8.0
margin_bottom = 358.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
custom_fonts/font = ExtResource( 9 )
text = "Spiral Keyboard"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="SignupModal/Panel/List/Button3"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 362.0
margin_right = -8.0
margin_bottom = 506.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Choose a letter by circling the joystick, then press any button to enter the selected letter. Less efficient than Daisywheel, but simpler to use."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="VBoxContainer" parent="SignupModal/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 81.0
margin_right = -20.0
margin_bottom = -79.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head" type="Label" parent="SignupModal/Panel/Name"]
margin_top = 118.0
margin_right = 888.0
margin_bottom = 209.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
custom_fonts/font = ExtResource( 11 )
text = "A player with this nickname just tried to join the room. Confirm?"
autowrap = true

[node name="Name" type="Label" parent="SignupModal/Panel/Name"]
margin_top = 209.0
margin_right = 888.0
margin_bottom = 277.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
custom_fonts/font = ExtResource( 6 )
text = "WWWWWWWW"
align = 1
valign = 1

[node name="Button" type="Button" parent="SignupModal/Panel/Name"]
margin_top = 277.0
margin_right = 888.0
margin_bottom = 327.0
custom_fonts/font = ExtResource( 11 )
text = "„çù ‚Äî Yes, welcome!"

[node name="Button2" type="Button" parent="SignupModal/Panel/Name"]
margin_top = 327.0
margin_right = 888.0
margin_bottom = 377.0
custom_fonts/font = ExtResource( 11 )
text = "„çú ‚Äî No, get out."

[node name="Confirm" type="Panel" parent="SignupModal/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = 76.0
custom_styles/panel = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="SignupModal/Panel/Confirm"]
margin_left = 64.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 11 )
text = "–ü—Ä–∏–Ω—è—Ç—å"
valign = 1

[node name="Panel" type="Panel" parent="SignupModal/Panel/Confirm"]
margin_left = 8.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 56.0
custom_styles/panel = ExtResource( 21 )

[node name="Label" type="Label" parent="SignupModal/Panel/Confirm/Panel"]
margin_right = 48.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 11 )
text = "„çù"
align = 1
valign = 1

[node name="KeyboardBox" parent="." instance=ExtResource( 15 )]
visible = false

[node name="MouseMask" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingIndicator" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 25 )

[node name="LoadingProgress" type="Label" parent="LoadingIndicator"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -300.0
margin_right = 300.0
margin_bottom = 48.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 300, 0 )
custom_fonts/font = ExtResource( 11 )
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingPanel" type="Panel" parent="LoadingIndicator"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -72.0
margin_right = 512.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 512, 72 )

[node name="ProgressBar" type="ProgressBar" parent="LoadingIndicator/LoadingPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LoadingIndicator/LoadingPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -72.0
custom_fonts/font = ExtResource( 9 )
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress" type="Label" parent="LoadingIndicator/LoadingPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 72.0
custom_fonts/font = ExtResource( 11 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Instructions/ScrollContainer/Timer" to="Instructions/ScrollContainer" method="_on_Timer_timeout"]
[connection signal="gui_input" from="Ready" to="." method="_on_Ready_gui_input"]
[connection signal="pressed" from="TouchButton" to="." method="_on_TouchButton_pressed"]
[connection signal="pressed" from="SignupModal/Panel/Name/Button" to="SignupModal" method="_on_Button_pressed"]
[connection signal="pressed" from="SignupModal/Panel/Name/Button2" to="SignupModal" method="_on_Button2_pressed"]
